[workspace]
resolver = "2"
members = [
    "programs/*",
    "libraries/*",
    "vendor/raydium-clmm/programs/*",
    "vendor/raydium-cp-swap/programs/*",
]
[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
