[package]
name = "cp-lp-escrow"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "cp_lp_escrow"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
localnet=[]

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
raydium-cp-swap = { git = "https://github.com/raydium-io/raydium-cp-swap", features = [
    "cpi",
] }
precise_number = { path = "../../libraries/precise_number" }
