[package]
name = "gauge"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "gauge"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
localnet =[]

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
precise_number = { path = "../../libraries/precise_number" }
reactor = { path = "../reactor", features = ["cpi"] }
raydium-amm-v3 = { git = "https://github.com/raydium-io/raydium-clmm", branch = "fix_guage_depend", features = [
    "cpi",
] }
cp-lp-escrow = { path = "../cp-lp-escrow", features = ["cpi"] }
